--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,11 @@
     <title>Adopter</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
- <div id="root">not rendered</div> 
+    <div id="modal"></div>
+    <div id="root">not rendered</div>
     <script src="./App.js"> </script>
 </body>
+
 </html>
